--- a/package.json
+++ b/package.json
@@ -1,6 +1,20 @@
 {
+  "name": "lab1",
+  "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start" : "node index.js"
+  },
+  "author": "DnischeMorskoe",
+  "license": "ISC",
   "dependencies": {
-    "ejs": "^3.1.8",
-    "express": "^4.18.2"
+    "bootstrap": "^5.3.0-alpha1",
+    "express": "^4.18.2",
+    "fs-extra": "^11.1.0",
+    "hbs": "^4.2.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.20"
   }
 }
