--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start" : "node index.js"
+    "start": "node index.js"
   },
   "author": "DnischeMorskoe",
   "license": "ISC",
@@ -12,7 +12,8 @@
     "bootstrap": "^5.3.0-alpha1",
     "express": "^4.18.2",
     "fs-extra": "^11.1.0",
-    "hbs": "^4.2.0"
+    "hbs": "^4.2.0",
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
